--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <li><a class="top-nav-font" href="#">Support</a></li>
         </ul>
     </nav>
-    <div class="pop-up">
-       <p> Shop online and get Specialist help,and more. Some of our stores are offering limited services. Before you visit, please check your store's services.</p>
+    <div class="pop-up" id="pop-up">
+       <p> Shop online and get Specialist help,and more. Some of our stores are offering limited services. Before you visit, please check your <a href="#"> store's services.</a></p>
     </div>
     <div class="pop-up">
-        <p>Save 5% on Apple Products with a new Apple Card through January 31. Only at Apple. Exclusions and terms apply. Learn more</p>
+        <p>Save 5% on Apple Products with a new Apple Card through January 31. Only at Apple. Exclusions and terms apply. <a href="#">Learn more</a></p>
     </div>
     <div class="main-deals">
         <h1>iPhone 13 Pro</h1>
