--- a/index.html
+++ b/index.html
@@ -28,23 +28,26 @@
     <div class="pop-up">
         <p>Save 5% on Apple Products with a new Apple Card through January 31. Only at Apple. Exclusions and terms apply. <a href="#">Learn more</a></p>
     </div>
-    <div class="main-deals">
+    <div class="main-deals" id="deals1">
         <h1>iPhone 13 Pro</h1>
         <p>Oh.So. Pro.</p>
         <a href=#>Learn More></a>
         <a href=#> Buy> </a>
+        <img class="main-ads" src="images/download.jpg" alt="Blue iPhone13 Pro">
     </div>
     <div class="main-deals">
-        <h1>iPhone 13</h1>
+        <h1 class="white-font">iPhone 13</h1>
         <p>Your new superpower.</p>
         <a href=#>Learn More></a>
         <a href=#> Buy> </a>
+        <img class="main-ads" src="images/download-1.jpg" alt="Pink Iphone13's">
     </div>
     <div class="main-deals">
         <h1>Watch</h1>
         <p>Introducing our largest display yet.</p>
         <a href=#>Learn More></a>
         <a href=#> Buy> </a>
+        <img class="main-ads" src="images/hero_watch__f05go333pz2i_medium_2x.jpg" alt="Green Apple Watch">
     </div>
     <div class="container">
         <div>
