--- a/index.html
+++ b/index.html
@@ -31,22 +31,26 @@
     <div class="main-deals" id="deals1">
         <h1>iPhone 13 Pro</h1>
         <p>Oh.So. Pro.</p>
+        <div class="links">
         <a href=#>Learn More></a>
-        <a href=#> Buy> </a>
+        <a href=#> Buy> </a></div>
         <img class="main-ads" src="images/download.jpg" alt="Blue iPhone13 Pro">
     </div>
     <div class="main-deals">
         <h1 class="white-font">iPhone 13</h1>
         <p>Your new superpower.</p>
-        <a href=#>Learn More></a>
+        <div class= "links"> <a href=#>Learn More></a>
         <a href=#> Buy> </a>
-        <img class="main-ads" src="images/download-1.jpg" alt="Pink Iphone13's">
+        </div>
+        <img class="main-ads" src="images/Apple-Has-Released-a-Detailed-Analysis-of-the-New-iPhone-131.jpeg" alt="Pink Iphone13's">
     </div>
     <div class="main-deals">
         <h1>Watch</h1>
         <p>Introducing our largest display yet.</p>
-        <a href=#>Learn More></a>
-        <a href=#> Buy> </a>
+        <div class= "links"> 
+         <a href=#>Learn More></a>
+         <a href=#> Buy> </a>
+        </div>
         <img class="main-ads" src="images/hero_watch__f05go333pz2i_medium_2x.jpg" alt="Green Apple Watch">
     </div>
     <div class="container">
