--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="main-deals">
         <h1 class="white-font">iPhone 13</h1>
-        <p>Your new superpower.</p>
+        <p class= "purple-font" > Your new superpower.</p>
         <div class= "links"> <a href=#>Learn More></a>
         <a href=#> Buy> </a>
         </div>
@@ -55,39 +55,57 @@
     </div>
     <div class="container">
         <div>
+            <aside>
             <h1>Fitness+</h1>
             <p>More ways to move. Now with Time to Run and Collections</p>
             <a href="#">See what's new ></a>
             <a href="#">Try it free ></a>
+            </aside>
+            <img class= "mini-ads" src="small images/tile_winter__bpktzwl6hsc2_medium_2x.jpeg" alt="Man running with apple watch">
         </div>
         <div>
+            <aside>
             <h1>Macbook Pro</h1>
             <p>Supercharged for pros.</p>
             <a href="#">Learn more > </a>
             <a href="#">Buy ></a>
+            </aside>
+            <img class= "mini-ads" src="small images/tile_macbookpro__cx0ur0qg9biq_medium_2x.jpeg" alt="open macbook">
         </div>
         <div>
+            <aside>
             <h1>AirPods</h1>
             <p>All-new Spatial Audio</p>
             <a href="#">Learn more > </a>
             <a href="#">Buy ></a>
+            </aside>
+            <img class= "mini-ads" src="small images/tile_airpods__fuv6vgn42y2q_medium_2x.jpeg" alt="white airpods">
         </div>
         <div>
+            <aside>
             <h1>Music</h1>
             <p>Introducing Spatial Audio with Dolby Atmos</p>
             <a href="#">Listen now > </a>
+            </aside>
+            <img class= "mini-ads" src="small images/tile_homepod_mini__b73w4z3ljymu_medium_2x.jpeg" alt="multicolored homepod minis">
         </div>
         <div>
+            <aside>
             <h1>Card</h1>
             <p>Save 5% on Apple products with a new Apple Card through January 31</p>
             <p>Only at Apple. Exclusions and terms apply.</p>
             <a href="#">Learn more > </a>
             <a href="#">Apple Now ></a>
+            </aside>
+            <img class= "mini-ads" src="small images/tile_apple_card__cwonh0wb00om_medium_2x.jpg" alt="white apple card">
         </div>
         <div>
+            <aside>
             <h1>TV+</h1>
             <p>THE TRAGEDY OF MACBETH</p>
             <p>Directed by Joel Coen</p>
+            </aside>
+            <img class= "mini-ads" src="small images/promo_macbeth__e671onn69r8m_medium_2x.jpeg" alt="black and white portrait of man and woman">
         </div>    
     </div>
     <footer class="fine-print">
