--- a/index.html
+++ b/index.html
@@ -120,8 +120,44 @@
             <li>Available for qualifying applicants in the United States.</li>
             <li>Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City Branch.</li>
             <li>Apple TV+ is $4.99/month after free trial. One subscription per Family Sharing group. Offer good for 3 months after eligible device activation. Plan automatically renews until cancelled. Restrictions and other terms apply.</li>
-
         </ul>
+        <hr>
+        <nav class="bottom-nav">
+            <ul class= "bottom-list" >
+                Shop and Learn
+                <li>Store</li>
+                <li>Mac</li>
+                <li>iPad</li>
+                <li>iPhone</li>
+                <li>Watch</li>
+                <li>AirPods</li>
+                <li>TV & Home</li>
+                <li>iPod touch</li>
+                <li>AirTag</li>
+                <li>Accessories</li>
+                <li>Gift Cards</li>
+            </ul>
+            <ul class= "bottom-list" >
+                Services
+                <li> Apple Music </li>
+                <li> Apple TV+ </li>
+                <li> Apple Fitness+ </li>
+                <li> Apple News+ </li>
+                <li> Apple Arcade </li>
+                <li>iCloud</li>
+                <li> Apple One </li>
+                <li> Apple Card </li>
+                <li> Apple Books </li>
+                <li> Apple Podcasts </li>
+                <li>App Store</li>
+            </ul>
+            <ul class= "bottom-list" >
+                Account
+                <li>Manage Your Apple ID</li>
+                <li>Apple Store Account</li>
+                <li>iCloud.com</li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
